@@ -3,4 +3,4 @@ use warnings;
 use Test::More tests => 2;
 
 use_ok('Catalyst::Test', 'UFL::Phonebook');
-use_ok('UFL::Phonebook::Model::Organization');
+use_ok('UFL::Phonebook::Model::Unit');
