@@ -7,6 +7,8 @@ This file documents the revision history for UFL::Phonebook.
         - Convert /end to Catalyst::Action::RenderView
         - Move controller-specific configuration into the controller
           namespaces
+        - Rename Model::Organization to Model::Unit to match the rest
+          of the application
 
 0.19  Tue Nov 28 16:00:51 EST 2006
         - Cleanup {encode,decode}_ufid
